Added a page to update product information
now you dont have to delete and then recreate products

--- a/views/admin/admin-panel.hbs
+++ b/views/admin/admin-panel.hbs
@@ -32,7 +32,7 @@
         </div>
     </div>
 </div>
-<br />
+<br>
 <div class="row">
     <div class="col-sm-4">
         <div class="card card-shadow">
@@ -40,6 +40,15 @@
                 <h5 class="card-title">Remove product</h5>
                 <p class="card-text">Removes a product from the store (Goes live instantly)</p>
                 <a href="/admin/removeproduct" class="btn btn-primary pull-right">Go to processing</a>
+            </div>
+        </div>
+    </div>
+        <div class="col-sm-4">
+        <div class="card card-shadow">
+            <div class="card-body">
+                <h5 class="card-title">Add product</h5>
+                <p class="card-text">Adds a new product to the store (Goes live instantly)</p>
+                <a href="/admin/updateproduct" class="btn btn-primary pull-right">Go to product</a>
             </div>
         </div>
     </div>
