--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-4 col-md-offset-4"></div>
-    <div class="col-md-5 col-md-offset-4" style="margin-top:19%">
+    <div class="col-md-3 col-md-offset-3"></div>
+    <div class="col-md-6 col-md-offset-4" style="margin-top:19%">
         <div class="card card-shadow pad15-top pad30-right pad30-left">
             <h1>Sign In</h1>
             {{#if hasErrors}}
@@ -20,7 +20,27 @@
                     <input type="password" id="password" name="password" class="form-control"  placeholder="password">
                 </div>
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <button type="submit" class="btn btn-primary">Sign In</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary pull-left" data-toggle="modal" data-target="#reset-password-warning">Reset password</button>
+                <!-- Modal -->
+                <div class="modal fade" id="reset-password-warning" tabindex="-1" role="dialog" aria-labelledby="reset-password-warningLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="reset-password-warningLabel">Reset password</h4>
+                            </div>
+                        <div class="modal-body">
+                            <label for="email">Enter email used to signup:</label>
+                            <input type="text" id="emailReset" name="emailReset" class="form-control" placeholder="email">
+                        </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-success" onclick='window.location.replace("/sendReset/" + document.getElementById("emailReset").value);' data-dismiss="modal">Yes</button>
+                                <button type="button" class="btn btn-danger" onclick='' data-dismiss="modal">No</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary pull-right">Sign In</button>
             </form> 
             <br />
             <p>Don't have and account? <a href="/user/signup">Singup instead!</a></p>
